crates/wac-parser/tests/resolution/fail/export-conflict-interface.wac
import f: func();

interface foo {

}

export f with "foo";
